--- a/index.html
+++ b/index.html
@@ -235,6 +235,82 @@ scroll-behavior=smooth;
     canvas {
       display: block;
     }
+	
+	
+	    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
+    }
+
+    .grid-item {
+      position: relative;
+      overflow: hidden;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .grid-item img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      display: block;
+      transition: transform 0.3s ease;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .overlay-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 1.2rem;
+      font-weight: bold;
+      text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
+      z-index: 2;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .grid-item:hover img {
+      transform: scale(1.1);
+    }
+
+    .grid-item:hover .overlay {
+      opacity: 1;
+    }
+
+    .grid-item:hover .overlay-text {
+      opacity: 1;
+    }
+
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 480px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+    }
+	    * {
+      box-sizing: border-box;
+    }
 </style>
 </head>
 <body>
@@ -242,7 +318,7 @@ scroll-behavior=smooth;
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-white w3-hide-medium w3-hide-large w3-right w3-white " href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right w3-white " href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
     <a href="#home" class="w3-bar-item w3-button">HOME</a>
@@ -313,7 +389,38 @@ scroll-behavior=smooth;
 <div class="w3-content w3-container w3-padding-64">
   <h3 class="w3-center">MY WORK</h3>
   <p class="w3-center"><em>Here are some of my projects.<br> Click on the images to learn more about them</em></p><br>
-
+  <div class="grid">
+    <div class="grid-item" onclick="window.open('https://github.com/Mehaanj/StockMarketPredictionModel', '_blank')">
+      <img src="https://www.quoteinspector.com/media/investing/stocks-vs-market.jpg" alt="Image 1" />
+      <div class="overlay"></div>
+      <div class="overlay-text">Stock Market Prediction Model</div>
+    </div>
+    <div class="grid-item" onclick="window.open('https://github.com/Mehaanj/Quantum-Enhanced-Turbulence-Visualization', '_blank')">
+      <img src="https://www.nortekgroup.com/assets/images/_1920x1156_crop_center-center_none/Turbulent-flow.jpg" alt="Image 2" />
+      <div class="overlay"></div>
+      <div class="overlay-text">Quantum Turbulence Prediction Model</div>
+    </div>
+    <div class="grid-item" onclick="window.open('', '_blank')">
+      <img src="https://via.placeholder.com/400x200" alt="Image 3" />
+      <div class="overlay"></div>
+      <div class="overlay-text">ReBOT</div>
+    </div>
+    <div class="grid-item" onclick="window.open('https://github.com/Mehaanj/KEGG-Reaction-Dynamics-Simulator', '_blank')">
+      <img src="https://www.frontiersin.org/files/Articles/663535/fcell-09-663535-HTML/image_m/fcell-09-663535-g001.jpg" alt="Image 4" />
+      <div class="overlay"></div>
+      <div class="overlay-text">Reaction Dynamics Simulator</div>
+    </div>
+    <div class="grid-item" onclick="alert('More Info about Example 5')">
+      <img src="https://via.placeholder.com/400x200" alt="Image 5" />
+      <div class="overlay"></div>
+      <div class="overlay-text">Example 5</div>
+    </div>
+    <div class="grid-item" onclick="window.open('https://example.com/6', '_blank')">
+      <img src="https://via.placeholder.com/400x200" alt="Image 6" />
+      <div class="overlay"></div>
+      <div class="overlay-text">Example 6</div>
+    </div>
+  </div>
 </div>
 
 <!-- Modal for full size images on click-->
@@ -443,7 +550,7 @@ scroll-behavior=smooth;
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
@@ -594,9 +701,7 @@ function myFunction() {
     var navbar = document.getElementById("myNavbar");
     if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
         navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
+    } 
 }
 
 // Used to toggle the menu on small screens when clicking on the menu button
