--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ scroll-behavior=smooth;
 	
 	<div class=" w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-center"></i>Mehaan Jain</b></p><br>
-      <img src="C:\Users\gauta\Downloads\77b11ed8-0759-409d-abee-951b23a0717b.JPEG" class="w3-round w3-image w3-center" alt="Photo of Me" width="300" height="133">
+      <img src="77b11ed8-0759-409d-abee-951b23a0717b.JPEG" class="w3-round w3-image w3-center" alt="Photo of Me" width="300" height="133">
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
