--- a/index.html
+++ b/index.html
@@ -410,15 +410,15 @@ scroll-behavior=smooth;
       <div class="overlay"></div>
       <div class="overlay-text">Reaction Dynamics Simulator</div>
     </div>
-    <div class="grid-item" onclick="alert('More Info about Example 5')">
-      <img src="https://via.placeholder.com/400x200" alt="Image 5" />
+    <div class="grid-item" onclick="alert('Stay Tuned')">
+      <img src="https://via.placeholder.com/400x200" alt="" />
       <div class="overlay"></div>
-      <div class="overlay-text">Example 5</div>
+      <div class="overlay-text">Stay Tuned</div>
     </div>
-    <div class="grid-item" onclick="window.open('https://example.com/6', '_blank')">
-      <img src="https://via.placeholder.com/400x200" alt="Image 6" />
+    <div class="grid-item">
+      <img src="https://via.placeholder.com/400x200" alt="" />
       <div class="overlay"></div>
-      <div class="overlay-text">Example 6</div>
+      <div class="overlay-text">Stay Tuned</div>
     </div>
   </div>
 </div>
@@ -552,7 +552,7 @@ scroll-behavior=smooth;
     <div class="w3-col m4 w3-container">
       <img src="" class="w3-image w3-round" style="width:100%">
     </div>
-    <div class="w3-col m8 w3-panel">
+    <div class="w3-col m8 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Hyderabad, India<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mehaan1.jain@gmail.com<br>
