--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ scroll-behavior=smooth;
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Hyderabad, India<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mehaan1.jain@gmail.com<br>
       </div>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe-mYSN6snEW5XdfMcTbFEECrAAxtFCAvU01WBqSWKD0-7-zw/viewform?embedded=true" width="640" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe-mYSN6snEW5XdfMcTbFEECrAAxtFCAvU01WBqSWKD0-7-zw/viewform?embedded=true" width="640" height="824" class="w3-center" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
   </div>
 </div>
