--- a/index.html
+++ b/index.html
@@ -548,10 +548,7 @@ scroll-behavior=smooth;
   <h3 class="w3-center">CONTACT ME</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="" class="w3-image w3-round" style="width:100%">
-    </div>
+  <div class="w3-row w3-padding-32 w3-section w3-center">
     <div class="w3-col m8 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Hyderabad, India<br>
