--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ function animate() {
 animate();
     const lines = [
       " I'm a Creator.",
-      " I'm a Robotics Enginner.",
+      " I'm a Robotics Engineer.",
       " I love building cool projects.",
       " I am a Python Developer.",
 	  " I am a CAD Designer"
