--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ scroll-behavior=smooth;
       <div class="overlay"></div>
       <div class="overlay-text">Quantum Turbulence Prediction Model</div>
     </div>
-    <div class="grid-item" onclick="window.open('', '_blank')">
+    <div class="grid-item" onclick="window.open('https://github.com/Mehaanj/ReBot', '_blank')">
       <img src="https://via.placeholder.com/400x200" alt="Image 3" />
       <div class="overlay"></div>
       <div class="overlay-text">ReBOT</div>
