--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ scroll-behavior=smooth;
       <div class="overlay-text">Quantum Turbulence Prediction Model</div>
     </div>
     <div class="grid-item" onclick="window.open('https://github.com/Mehaanj/ReBot', '_blank')">
-      <img src="https://via.placeholder.com/400x200" alt="Image 3" />
+      <img src="image_2025_05_06T07_26_54_248Z.png" alt="Image 3" />
       <div class="overlay"></div>
       <div class="overlay-text">ReBOT</div>
     </div>
